## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

oww_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

oww_pixmaps_DATA = \
	body.jpg\
	bottom1.jpg\
	bottom2.jpg\
	bottom3.jpg\
	bottom4.jpg\
	bottom5.jpg\
	bottom6.jpg\
	bottom7.jpg\
	bottom8.jpg\
	oww_xpm.xpm\
	rh.png\
	top1.jpg\
	top2.jpg\
	top3.jpg

EXTRA_DIST = $(oww_pixmaps_DATA)
